--- a/src/main/resources/br/com/fatec/view/GerenciarFilme.fxml
+++ b/src/main/resources/br/com/fatec/view/GerenciarFilme.fxml
@@ -77,5 +77,6 @@
          </font>
       </TextField>
       <ComboBox fx:id="cbId" layoutX="83.0" layoutY="82.0" onAction="#cbId_Change" prefHeight="28.0" prefWidth="56.0" />
+      <Button layoutX="476.0" layoutY="128.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
